Fix welcome section and overflow rendering

--- a/src/components/Header/Nav/styles.module.css
+++ b/src/components/Header/Nav/styles.module.css
@@ -46,6 +46,7 @@
 .multilanguage-button {
   border: 1px solid var(--black_alternative);
   border-radius: 25px;
+  cursor: pointer;
 }
 
 .multilanguage-button p {
