--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -29,37 +29,6 @@ p {
   line-height: 1.5;
 }
 
-.first-section-content {
-  background-image: url('/images/space_bg.gif');
-  background-size: cover;
-  background-position: center;
-  color: var(--white_alternative);
-  width: 100%;
-  height: calc(var(--vh, 1vh) * 90);
-  border-radius: 0 0 3.3rem 3.3rem;
-  box-shadow: 0 20px 50px rgba(146, 146, 146, 0.5);
-}
-
-.welcoming-section {
-  padding-top: calc(var(--vh, 1vh) * 15);
-}
-
-.welcoming-text {
-  font-family: var(--font-libre-baskerville);
-  font-style: light;
-  font-size: 2.25rem;
-  line-height: 1.5;
-}
-
-.role-text {
-  font-family: var(--font-libre-baskerville);
-  font-size: 3.5rem;
-  color: var(--yellow);
-  text-align: right;
-  margin-top: calc(var(--vh, 1vh) * 15);
-  line-height: 4rem;
-}
-
 .astronaut-image {
   max-width: 50%;
 }
